# par_arch_diagram

./: .gitignore  Makefile  README.md  pyproject.toml  readme-iac.md
src/par_arch_diagram/: __init__.py  __main__.py  system_prompt.md  utils.py
src/par_arch_diagram/lib/: llm_utils.py
